--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name="com.example.app.MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -12,11 +13,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DependencyInjectionApp">
         <activity
-            android:name="com.example.presentation.TodoActivity"
+            android:name="com.example.presentation.ui.TodoActivity"
             android:exported="true">
         </activity>
         <activity
-            android:name="com.example.presentation.SplashActivity"
+            android:name="com.example.presentation.ui.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
